Simplify docker compose setup for new users
This takes out some environment variables that are not needed
for new users testing out locally.

We also adjusted the port usage so docker-compose will use the
same ports that local dev typically uses.

--- a/packages/web/Dockerfile
+++ b/packages/web/Dockerfile
@@ -9,7 +9,7 @@ ARG SERVER_BASE_URL
 ARG HIGHLIGHTS_BASE_URL
 ENV NEXT_PUBLIC_APP_ENV=$APP_ENV
 ENV NEXT_PUBLIC_BASE_URL=$BASE_URL
-ENV NEXT_PUBLIC_SERVER_BASE_URL=$BASE_URL
+ENV NEXT_PUBLIC_SERVER_BASE_URL=$SERVER_BASE_URL
 ENV NEXT_PUBLIC_HIGHLIGHTS_BASE_URL=$HIGHLIGHTS_BASE_URL
 
 WORKDIR /app
