--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,15 +51,13 @@ services:
       - PG_DB=omnivore
       - PG_PORT=5432
       - PG_POOL_MAX=20
-      - IMAGE_PROXY_URL=http://localhost:8080
+      - IMAGE_PROXY_URL=http://localhost:9999
       - IMAGE_PROXY_SECRET=some-secret
       - JWT_SECRET=some_secret
       - SSO_JWT_SECRET=some_sso_secret
       - CLIENT_URL=http://localhost:3000
-      - GATEWAY_URL=http://localhost:4000/api
+      - GATEWAY_URL=http://localhost:8080/api
       - PUPPETEER_TASK_HANDLER_URL=http://localhost:9090/
-      - PREVIEW_IMAGE_WRAPPER_ID='selected_highlight_wrapper'
-      - PREVIEW_GENERATION_SERVICE_URL=http://localhost:8080/preview
       - REMINDER_TASK_HANDLER_URL=/svc/reminders/trigger
     depends_on:
       migrate:
@@ -71,12 +69,17 @@ services:
       dockerfile: ./packages/web/Dockerfile
       args:
         - APP_ENV=prod
-        - BASE_URL=http://localhost:8080
+        - BASE_URL=http://localhost:3000
         - SERVER_BASE_URL=http://localhost:4000
-        - HIGHLIGHTS_BASE_URL=http://localhost:8080
+        - HIGHLIGHTS_BASE_URL=http://localhost:3000
     container_name: "omnivore-web"
     ports:
-      - "8080:8080"
+      - "3000:8080"
+    environment:
+      - NEXT_PUBLIC_APP_ENV=prod
+      - NEXT_PUBLIC_BASE_URL=http://localhost:3000
+      - NEXT_PUBLIC_SERVER_BASE_URL=http://localhost:4000
+      - NEXT_PUBLIC_HIGHLIGHTS_BASE_URL=http://localhost:3000
     depends_on:
       api:
         condition: service_healthy
