Run tests on main branch
Update run-tests to work with the newly re-named main branch,

--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -2,12 +2,12 @@ name: Run tests
 on:
   push:
     branches:
-      - master
+      - main
     paths-ignore:
       - 'apple/**'
   pull_request:
     branches:
-      - master
+      - main
     paths-ignore:
       - 'apple/**'
 
