Run tests on ubuntu-latest

--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -15,6 +15,7 @@ jobs:
   run-graphql-inspector:
     name: Run GraphQL Inspector Checks
     if: github.actor != 'dependabot[bot]' && github.actor != 'dependabot-preview[bot]'
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
         with:
@@ -26,6 +27,7 @@ jobs:
 
   run-code-tests:
     name: Run Codebase tests
+    runs-on: ubuntu-latest
     services:
       postgres:
         image: postgres
