Simplify startup of the puppeteer service
- Run on port 9090 so we don't conflict with other services
- Route the docker-compose requests to the host network
- Dont require preview bucket information on startup

--- a/packages/puppeteer-parse/package.json
+++ b/packages/puppeteer-parse/package.json
@@ -20,7 +20,7 @@
     "@google-cloud/functions-framework": "^1.7.1"
   },
   "scripts": {
-    "start": "npx functions-framework --target=puppeteer",
+    "start": "npx functions-framework --port=9090 --target=puppeteer",
     "start_preview": "npx functions-framework --target=preview",
     "test": "yarn mocha"
   }
