--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,7 @@ services:
       - SSO_JWT_SECRET=some_sso_secret
       - CLIENT_URL=http://localhost:3000
       - GATEWAY_URL=http://localhost:8080/api
-      - PUPPETEER_TASK_HANDLER_URL=http://localhost:9090/
+      - PUPPETEER_TASK_HANDLER_URL=http://host.docker.internal:9090/
       - REMINDER_TASK_HANDLER_URL=/svc/reminders/trigger
     depends_on:
       migrate:
