--- a/packages/puppeteer-parse/.env.example
+++ b/packages/puppeteer-parse/.env.example
@@ -1,17 +1,8 @@
-# Should match with the JWT_SECRET that the backend uses
+# Should match with the JWT_SECRET that the api uses
 JWT_SECRET=some_secret
+
 # Address of the backend that is running locally
 REST_BACKEND_ENDPOINT=http://localhost:4000/api
-# Path to the chromium for puppeteer to use locally
-CHROMIUM_PATH=/usr/local/bin/chromium
-IS_LOCAL=true
 
-PREVIEW_IMAGE_BUCKET=omnivore-dev-preview-bucket
-# This var enables Default Application Credential to get access to the Google Cloud Storage
-# Either provide a path to your own service account JSON file that has acccess to the GCS, or download one from 1Password here:
-# https://start.1password.com/open/i?a=4255G5NBWZATRNORAU5VYYKQZM&v=pxajy5r4f5cypesaw4c4g5hc2q&i=5fduj37zk5em7meuwglkq3p4my&h=fluxon.1password.com
-GOOGLE_APPLICATION_CREDENTIALS=./omnivore-app-287712-d420b283ee86.sa.json
-# Origins that preview image creation service has access to
-# Might include few values separated by comma: "http://a,http://b, ..."
-ALLOWED_ORIGINS='http://localhost:3000'
-PREVIEW_IMAGE_CDN_ORIGIN='https://preview-dev.omnivore-image-cache.app'
+# set for local development
+IS_LOCAL=true
