--- a/pkg/admin/package.json
+++ b/pkg/admin/package.json
@@ -10,7 +10,7 @@
   },
   "devDependencies": {
     "@tsconfig/node14": "^1.0.1",
-    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.12",
     "@types/express-session": "^1.17.3",
     "@types/flat": "^5.0.1",
@@ -31,7 +31,7 @@
     "@adminjs/typeorm": "^2.0.0",
     "@types/react-router-dom": "^5.1.7",
     "adminjs": "5.0.1",
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
