--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,7 @@ services:
       - SSO_JWT_SECRET=some_sso_secret
       - CLIENT_URL=http://localhost:3000
       - GATEWAY_URL=http://localhost:8080/api
-      - PUPPETEER_TASK_HANDLER_URL=http://host.docker.internal:9090/
+      - PUPPETEER_TASK_HANDLER_URL=http://content-fetch:9090/
       - REMINDER_TASK_HANDLER_URL=/svc/reminders/trigger
     depends_on:
       migrate:
@@ -84,19 +84,16 @@ services:
       api:
         condition: service_healthy
 
-  # TODO: Needs some work to get this running on M1
-  # content-fetch:
-  #   platform: linux/amd64
-  #   build:
-  #     context: .
-  #     dockerfile: ./packages/puppeteer-parse/Dockerfile
-  #   container_name: "omnivore-content-fetch"
-  #   ports:
-  #     - "9090:8080"
-  #   environment:
-  #     - JWT_SECRET=some_secret
-  #     - PREVIEW_IMAGE_BUCKET='fake-bucket'
-  #     - REST_BACKEND_ENDPOINT=http://api:4000/api
-  #     - CHROMIUM_PATH=/usr/bin/google-chrome-stable
-  #     - IS_LOCAL=true
-  #     - ALLOWED_ORIGINS=http://localhost:8080
+  content-fetch:
+    build:
+      context: .
+      dockerfile: ./packages/puppeteer-parse/Dockerfile
+    container_name: "omnivore-content-fetch"
+    expose:
+      - 9090
+    environment:
+      - JWT_SECRET=some_secret
+      - REST_BACKEND_ENDPOINT=http://api:8080/api
+    depends_on:
+      api:
+        condition: service_healthy
