--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -5,7 +5,7 @@ on:
       - main
     paths-ignore:
       - 'apple/**'
-  pull_request_target:
+  pull_request:
     branches:
       - main
     paths-ignore:
