Upgrade gql-typegen and regen types

--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "deploy:web": "vercel --prod"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^1.21.8",
-    "@graphql-codegen/introspection": "^1.18.2",
-    "@graphql-codegen/schema-ast": "^1.18.2",
-    "@graphql-codegen/typescript": "^1.18.2",
-    "@graphql-codegen/typescript-resolvers": "^1.18.2",
+    "@graphql-codegen/cli": "^2.6.1",
+    "@graphql-codegen/introspection": "^2.1.1",
+    "@graphql-codegen/schema-ast": "^2.1.1",
+    "@graphql-codegen/typescript": "^2.1.1",
+    "@graphql-codegen/typescript-resolvers": "^2.1.1",
+    "@ardatan/aggregate-error": "^0.0.6",
     "@tsconfig/node14": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
