--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,12 @@
 {
-	"name": "omnivore",
-	"dockerComposeFile": "../docker-compose.yml",
-	"service": "web",
-	"workspaceFolder": "/workspace",
-	"runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined" ],
-	"extensions": [],
-	"remoteUser": "vscode"
+  "name": "omnivore",
+  "dockerComposeFile": [
+    "../docker-compose.yml",
+    "docker-compose.devcontainer.yml"
+  ],
+  "service": "app",
+  "workspaceFolder": "/workspace",
+  "extensions": [],
+  "remoteUser": "vscode"
 }
 
