Don't run content-fetch

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,6 +7,13 @@
   "service": "app",
   "workspaceFolder": "/workspace",
   "extensions": [],
-  "remoteUser": "vscode"
+  "remoteUser": "vscode",,
+  "runServices": [
+    "postgres",
+    "migrate",
+    "api",
+    "web",
+    "app"
+  ]
 }
 
