--- a/apple/Sources/SafariExtension/Resources/manifest.json
+++ b/apple/Sources/SafariExtension/Resources/manifest.json
@@ -2,10 +2,10 @@
   "manifest_version": 2,
   "name": "Omnivore",
   "short_name": "Omnivore",
-  "version": "0.1.18",
+  "version": "0.1.20",
   "description": "Save articles to your Omnivore library",
   "author": "Omnivore Media, Inc",
-  "default_locale": "en_US",
+  "default_locale": "en",
   "developer": {
     "name": "Omnivore Media, Inc",
     "url": "https://omnivore.app/"
