--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,16 +2,8 @@
   "name": "omnivore",
   "dockerComposeFile": [
     "../docker-compose.yml",
-    "docker-compose.devcontainer.yml"
   ],
-  "service": "app",
-  "workspaceFolder": "/workspace",
-  "extensions": [],
-  "remoteUser": "vscode",
-  "runServices": [
-    "postgres",
-    "migrate",
-    "api",
-    "app"
-  ]
+  "service": "web",
+  "workspaceFolder": "/app",
+  "extensions": []
 }
