--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,8 @@
 {
   "name": "omnivore",
   "dockerComposeFile": [
-    "../docker-compose.yml",
+    "docker-compose.devcontainer.yml"
   ],
   "service": "web",
-  "workspaceFolder": "/app",
   "extensions": []
 }
