--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,10 @@
 {
   "name": "omnivore",
   "dockerComposeFile": [
+    "../docker-compose.yml",
     "docker-compose.devcontainer.yml"
   ],
   "service": "web",
-  "onCreateCommand": "cd ./packages/web && cp .env.local .env && yarn install",
+  "onCreateCommand": "cd ./packages/web && yarn install",
   "extensions": []
 }
