--- a/.devcontainer/docker-compose.devcontainer.yml
+++ b/.devcontainer/docker-compose.devcontainer.yml
@@ -5,6 +5,14 @@ services:
     # docker-compose.yml file (the first in the devcontainer.json "dockerComposeFile"
     # array). The sample below assumes your primary file is in the root of your project.
     build:
-      context: ../
+      context: .
       dockerfile: .devcontainer/Dockerfile
+    environment:
+      - NEXT_PUBLIC_APP_ENV=local
+      - NEXT_PUBLIC_BASE_URL=http://localhost:3000
+      - NEXT_PUBLIC_SERVER_BASE_URL=http://api:8000
+      - NEXT_PUBLIC_HIGHLIGHTS_BASE_URL=http://localhost:3000
     command: /bin/sh -c "while sleep 1000; do :; done"
+    depends_on:
+      api:
+        condition: service_healthy
