--- a/.devcontainer/docker-compose.devcontainer.yml
+++ b/.devcontainer/docker-compose.devcontainer.yml
@@ -15,4 +15,4 @@ services:
     command: /bin/sh -c "while sleep 1000; do :; done"
     depends_on:
       api:
-        condition: service_healthy
+        condition: service_started
