API container is crashing

--- a/.devcontainer/docker-compose.devcontainer.yml
+++ b/.devcontainer/docker-compose.devcontainer.yml
@@ -16,3 +16,8 @@ services:
     depends_on:
       api:
         condition: service_started
+
+  content-fetch:
+    depends_on:
+      api:
+        condition: service_started
