generate swift gql code

--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -23,3 +23,4 @@ GCS_UPLOAD_BUCKET=
 GCS_UPLOAD_SA_KEY_FILE_PATH=
 TWITTER_BEARER_TOKEN=
 PREVIEW_IMAGE_WRAPPER_ID='selected_highlight_wrapper'
+REMINDER_TASK_HANDLER_URL=
