Add package file back to migration image
This is needed when running via docker-compose

--- a/packages/db/Dockerfile
+++ b/packages/db/Dockerfile
@@ -2,6 +2,8 @@ FROM node:14.18-alpine
 
 WORKDIR /app
 
+COPY package.json .
+COPY yarn.lock .
 COPY tsconfig.json .
 
 COPY /packages/db/package.json ./packages/db/package.json
