--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -13,7 +13,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "types": ["jest", "node"],
+    "types": ["node", "jest", "@testing-library/jest-dom"],
     "incremental": true
   },
   "include": ["additional.d.ts", "next-env.d.ts", "**/*.ts", "**/*.tsx"],
