include more files in test coverage

--- a/packages/api/.nycrc
+++ b/packages/api/.nycrc
@@ -3,8 +3,7 @@
   "check-coverage": true,
   "all": true,
   "include": [
-    "src/resolvers/**/index.ts",
-    "src/elastic/index.ts"
+    "src/**/*.ts"
   ],
   "reporter": [
     "text"
