change alias name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
         condition: service_healthy
 
   elastic:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.12.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.17.1
     container_name: "omnivore-elastic"
     healthcheck:
     #   test: ["CMD", "nc", "-z", "-v", "localhost", "9200"]
@@ -54,6 +54,16 @@ services:
       - ./.docker/elastic-data:/usr/share/elasticsearch/data
     ports:
       - "9200:9200"
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:7.17.1
+    container_name: "omnivore-kibana"
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elastic:9200
+    depends_on:
+      - elastic
+    ports:
+      - "5601:5601"
 
   api:
     build:
