read index mappings from file

--- a/packages/api/index_settings.json
+++ b/packages/api/index_settings.json
@@ -104,7 +104,7 @@
           }
         }
       },
-      "readingProgress": {
+      "readingProgressPercent": {
         "type": "float"
       },
       "readingProgressAnchorIndex": {
