--- a/packages/readabilityjs/package.json
+++ b/packages/readabilityjs/package.json
@@ -33,6 +33,7 @@
     "sinon": "^7.3.2"
   },
   "dependencies": {
+    "html-entities": "^2.3.2",
     "modern-random-ua": "^1.0.3",
     "parse-srcset": "^1.0.2"
   }
