add GCS_UPLOAD_PRIVATE_BUCKET in test env

--- a/packages/api/.env.test
+++ b/packages/api/.env.test
@@ -21,6 +21,7 @@ JAEGER_HOST=
 SAMPLE_METRICS_LOCALLY=FALSE
 GCS_UPLOAD_BUCKET=
 GCS_UPLOAD_SA_KEY_FILE_PATH=
+GCS_UPLOAD_PRIVATE_BUCKET=
 TWITTER_BEARER_TOKEN=
 PREVIEW_IMAGE_WRAPPER_ID='selected_highlight_wrapper'
 SEGMENT_WRITE_KEY='test'
