--- a/packages/api/.env.test
+++ b/packages/api/.env.test
@@ -26,3 +26,4 @@ TWITTER_BEARER_TOKEN=
 PREVIEW_IMAGE_WRAPPER_ID='selected_highlight_wrapper'
 SEGMENT_WRITE_KEY='test'
 REMINDER_TASK_HANDLER_URL=http://localhost:4000/svc/reminders/trigger
+PUBSUB_VERIFICATION_TOKEN='123456'
