add highlight mappings

--- a/packages/api/index_settings.json
+++ b/packages/api/index_settings.json
@@ -56,6 +56,21 @@
           }
         }
       },
+      "highlights": {
+        "type": "nested",
+        "properties": {
+          "id": {
+            "type": "keyword"
+          },
+          "quote": {
+            "type": "text",
+            "analyzer": "strip_html_analyzer"
+          },
+          "createdAt": {
+            "type": "date"
+          }
+        }
+      },
       "readingProgressPercent": {
         "type": "float"
       },
