add test for getting highlights

--- a/packages/api/index_settings.json
+++ b/packages/api/index_settings.json
@@ -62,7 +62,14 @@
           "id": {
             "type": "keyword"
           },
+          "userId": {
+            "type": "keyword"
+          },
           "quote": {
+            "type": "text",
+            "analyzer": "strip_html_analyzer"
+          },
+          "annotation": {
             "type": "text",
             "analyzer": "strip_html_analyzer"
           },
