search pages with highlights only with has:highlight query

--- a/packages/api/index_settings.json
+++ b/packages/api/index_settings.json
@@ -70,8 +70,7 @@
             "analyzer": "strip_html_analyzer"
           },
           "annotation": {
-            "type": "text",
-            "analyzer": "strip_html_analyzer"
+            "type": "text"
           },
           "createdAt": {
             "type": "date"
