--- a/packages/api/.env.test
+++ b/packages/api/.env.test
@@ -27,3 +27,5 @@ PREVIEW_IMAGE_WRAPPER_ID='selected_highlight_wrapper'
 SEGMENT_WRITE_KEY='test'
 REMINDER_TASK_HANDLER_URL=http://localhost:4000/svc/reminders/trigger
 PUBSUB_VERIFICATION_TOKEN='123456'
+PUPPETEER_TASK_HANDLER_URL=http://localhost:9090/
+
