fix missing index_settings.json file in api dockerfile for creating elastic index

--- a/packages/api/Dockerfile
+++ b/packages/api/Dockerfile
@@ -38,6 +38,7 @@ COPY --from=builder /app/packages/api/package.json /app/packages/api/package.jso
 COPY --from=builder /app/packages/api/node_modules /app/packages/api/node_modules
 COPY --from=builder /app/node_modules /app/node_modules
 COPY --from=builder /app/package.json /app/package.json
+COPY --from=builder /app/packages/api/index_settings.json /app/packages/api/index_settings.json
 
 EXPOSE 8080
 
