--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -24,3 +24,4 @@ GCS_UPLOAD_SA_KEY_FILE_PATH=
 TWITTER_BEARER_TOKEN=
 PREVIEW_IMAGE_WRAPPER_ID='selected_highlight_wrapper'
 REMINDER_TASK_HANDLER_URL=
+ELASTIC_URL=http://localhost:9200
