--- a/packages/api/index_settings.json
+++ b/packages/api/index_settings.json
@@ -74,6 +74,9 @@
           },
           "createdAt": {
             "type": "date"
+          },
+          "updatedAt": {
+            "type": "date"
           }
         }
       },
