--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -69,7 +69,6 @@ jobs:
           yarn build
           yarn lint
           yarn test
-
         env:
           PG_HOST: localhost
           PG_PORT: ${{ job.services.postgres.ports[5432] }}
@@ -78,3 +77,12 @@ jobs:
           PG_DB: omnivore_test
           PG_POOL_MAX: 10
           ELASTIC_URL: http://localhost:${{ job.services.elastic.ports[9200] }}/
+  build-docker-images:
+    name: Build docker images
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Build the API docker image
+        run: 'docker build -F packages/api .'
