Do a two step build so all dependencies are not copied over

--- a/packages/api/Dockerfile
+++ b/packages/api/Dockerfile
@@ -21,6 +21,9 @@ ADD /packages/api ./packages/api
 RUN yarn
 RUN yarn workspace @omnivore/api build
 
+RUN rm -rf /app/packages/api/node_modules
+RUN rm -rf /app/node_modules
+RUN yarn install --pure-lockfile --production
 
 FROM node:14.18-alpine as runner
 
@@ -33,10 +36,10 @@ ENV PORT=8080
 COPY --from=builder /app/packages/api/dist /app/packages/api/dist
 COPY --from=builder /app/packages/readabilityjs/ /app/packages/readabilityjs/
 COPY --from=builder /app/packages/api/package.json /app/packages/api/package.json
+COPY --from=builder /app/packages/api/node_modules /app/packages/api/node_modules
+COPY --from=builder /app/node_modules /app/node_modules
 COPY --from=builder /app/package.json /app/package.json
 COPY --from=builder /app/packages/api/index_settings.json /app/packages/api/index_settings.json
-RUN yarn install --production
-
 EXPOSE 8080
 
 CMD ["yarn", "workspace", "@omnivore/api", "start"]
