--- a/packages/api/Dockerfile
+++ b/packages/api/Dockerfile
@@ -2,7 +2,6 @@ FROM node:14.18-alpine as builder
 
 WORKDIR /app
 
-ENV NODE_ENV production
 ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD true
 
 COPY package.json .
@@ -14,7 +13,7 @@ COPY .eslintrc .
 COPY /packages/readabilityjs/package.json ./packages/readabilityjs/package.json
 COPY /packages/api/package.json ./packages/api/package.json
 
-RUN yarn install --pure-lockfile --production
+RUN yarn install --pure-lockfile
 
 ADD /packages/readabilityjs ./packages/readabilityjs
 ADD /packages/api ./packages/api
@@ -22,7 +21,10 @@ ADD /packages/api ./packages/api
 RUN yarn
 RUN yarn workspace @omnivore/api build
 
-
+# After building, fetch the production dependencies
+RUN rm -rf /app/packages/api/node_modules
+RUN rm -rf /app/node_modules
+RUN yarn install --pure-lockfile --production
 
 FROM node:14.18-alpine as runner
 
@@ -39,7 +41,6 @@ COPY --from=builder /app/packages/api/node_modules /app/packages/api/node_module
 COPY --from=builder /app/node_modules /app/node_modules
 COPY --from=builder /app/package.json /app/package.json
 COPY --from=builder /app/packages/api/index_settings.json /app/packages/api/index_settings.json
-
 EXPOSE 8080
 
 CMD ["yarn", "workspace", "@omnivore/api", "start"]
