Add testing-library dependency

--- a/packages/cypress/package.json
+++ b/packages/cypress/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {},
   "dependencies": {
+    "@testing-library/cypress": "^8.0.2",
     "cypress": "^9.5.3"
   },
   "devDependencies": {},
