Fix tsconfig file

--- a/packages/cypress/tsconfig.json
+++ b/packages/cypress/tsconfig.json
@@ -13,9 +13,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "types": ["node", "jest", "@testing-library/jest-dom"],
+    "types": ["node"],
     "incremental": true
   },
-  "include": ["additional.d.ts", "next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
