--- a/packages/api/mocha-config.json
+++ b/packages/api/mocha-config.json
@@ -1,5 +1,5 @@
 {
   "extension": ["ts"],
-  "spec": "test/elastic/*.test.ts",
+  "spec": "test/**/*.test.ts",
   "require": ["test/babel-register.js", "test/global-setup.ts", "test/global-teardown.ts"]
 }
