--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -63,13 +63,12 @@ jobs:
         run: |
           source ~/.nvm/nvm.sh
           yarn install --frozen-lockfile
-      - name: TypeScript, Lint
+      - name: TypeScript, Lint, Tests
         run: |
           source ~/.nvm/nvm.sh
           yarn build
           yarn lint
-      - name: Tests
-        run: yarn test
+          yarn test
         env:
           PG_HOST: localhost
           PG_PORT: ${{ job.services.postgres.ports[5432] }}
