--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -1,12 +1,12 @@
 version: '3'
 services:
-  postgres:
+  postgres-test:
     image: "postgres:12.8"
-    container_name: "omnivore-postgres"
+    container_name: "omnivore-postgres-test"
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=omnivore
+      - POSTGRES_DB=omnivore_test
       - PG_POOL_MAX=20
     healthcheck:
       test: "exit 0"
@@ -16,30 +16,11 @@ services:
     expose:
       - 5432
 
-  migrate:
-    build:
-      context: .
-      dockerfile: ./packages/db/Dockerfile
-    container_name: "omnivore-migrate"
-    command: '/bin/sh ./packages/db/setup.sh'
-    environment:
-      - PGPASSWORD=postgres
-      - PG_HOST=postgres
-      - PG_USER=postgres
-      - PG_PASSWORD=postgres
-      - PG_DB=omnivore
-      - ES_URL=http://elastic:9200
-      - ES_USERNAME=blank
-      - ES_PASSWORD=blank
-    depends_on:
-      postgres:
-        condition: service_healthy
-
-  elastic:
+  elastic-test:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.17.1
-    container_name: "omnivore-elastic"
+    container_name: "omnivore-elastic-test"
     healthcheck:
-      test: curl 0.0.0.0:9200/_cat/health >/dev/null || exit 1
+      test: curl 0.0.0.0:9201/_cat/health >/dev/null || exit 1
       interval: 2s
       timeout: 2s
       retries: 5
@@ -49,10 +30,11 @@ services:
       - http.cors.enabled=true
       - http.cors.allow-headers=X-Requested-With,X-Auth-Token,Content-Type,Content-Length,Authorization
       - http.cors.allow-credentials=true
+      - http.port=9201
     volumes:
       - ./.docker/elastic-data:/usr/share/elasticsearch/data
     ports:
-      - "9200:9200"
+      - "9201:9201"
 
   api-test:
     build:
@@ -61,13 +43,13 @@ services:
     container_name: "omnivore-api-test"
     environment:
       - API_ENV=local
-      - PG_HOST=postgres
-      - PG_USER=app_user
-      - PG_PASSWORD=app_pass
-      - PG_DB=omnivore
+      - PG_HOST=postgres-test
+      - PG_USER=postgres
+      - PG_PASSWORD=postgres
+      - PG_DB=omnivore_test
       - PG_PORT=5432
       - PG_POOL_MAX=20
-      - ELASTIC_URL=http://elastic:9200
+      - ELASTIC_URL=http://elastic-test:9201
       - IMAGE_PROXY_URL=http://localhost:9999
       - IMAGE_PROXY_SECRET=some-secret
       - JWT_SECRET=some_secret
@@ -83,8 +65,9 @@ services:
       - GAUTH_CLIENT_ID='notset'
       - GAUTH_SECRET='notset'
       - SEGMENT_WRITE_KEY='test'
+      - PUBSUB_VERIFICATION_TOKEN='123456'
     depends_on:
-      migrate:
-        condition: service_completed_successfully
-      elastic:
+      postgres-test:
+        condition: service_healthy
+      elastic-test:
         condition: service_healthy
