save subscription from newsletter

--- a/packages/api/index_settings.json
+++ b/packages/api/index_settings.json
@@ -97,6 +97,9 @@
       },
       "siteName": {
         "type": "text"
+      },
+      "subscription": {
+        "type": "keyword"
       }
     }
   }
