Allow search for subscription:name

--- a/packages/api/index_settings.json
+++ b/packages/api/index_settings.json
@@ -99,7 +99,8 @@
         "type": "text"
       },
       "subscription": {
-        "type": "keyword"
+        "type": "keyword",
+        "normalizer": "lowercase_normalizer"
       }
     }
   }
