Add topbar dependencies

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -42,6 +42,7 @@
     "react-hot-toast": "^2.1.1",
     "react-intl": "^5.20.12",
     "react-loading-skeleton": "^3.0.2",
+    "react-topbar-progress-indicator": "^4.1.1",
     "react-twitter-widgets": "^1.10.0",
     "swr": "^1.0.1",
     "uuid": "^8.3.2"
