Add state and taskName in elastic page mappings

--- a/packages/api/index_settings.json
+++ b/packages/api/index_settings.json
@@ -101,6 +101,12 @@
       "subscription": {
         "type": "keyword",
         "normalizer": "lowercase_normalizer"
+      },
+      "state": {
+        "type": "keyword"
+      },
+      "taskName": {
+        "type": "keyword"
       }
     }
   }
