Search for not failed pages

--- a/packages/api/index_settings.json
+++ b/packages/api/index_settings.json
@@ -103,7 +103,8 @@
         "normalizer": "lowercase_normalizer"
       },
       "state": {
-        "type": "keyword"
+        "type": "keyword",
+        "null_value": "SUCCEEDED"
       },
       "taskName": {
         "type": "keyword"
