--- a/packages/api/index_settings.json
+++ b/packages/api/index_settings.json
@@ -103,8 +103,7 @@
         "normalizer": "lowercase_normalizer"
       },
       "state": {
-        "type": "keyword",
-        "null_value": "SUCCEEDED"
+        "type": "keyword"
       },
       "taskName": {
         "type": "keyword"
