--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@elastic/elasticsearch": "~7.12.0",
     "dotenv": "^8.2.0",
     "pg": "^8.3.0",
     "postgrator": "^4.1.1",
